# atomic_habbits

./: .env_example  .flake8  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: celery.py  settings.py  urls.py
habit/: admin.py  models.py  pagination.py  serializers.py  tasks.py  telegram_utils.py  tests.py  urls.py  validators.py  views.py
users/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
users/management/commands/: create_superuser.py  create_users.py
