[tool.poetry]
name = "atomic-habbits"
version = "0.1.0"
description = ""
authors = ["exetch <gassemark@gmail.com>"]
readme = "README.md"
packages = [{include = "atomic_habbits"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
djangorestframework = "^3.14.0"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.0"
pillow = "9.5.0"
djangorestframework-simplejwt = "^5.3.0"
django-filter = "^23.4"
faker = "^20.1.0"
coverage = "^7.3.2"
drf-yasg = "^1.21.7"
celery = "^5.3.6"
eventlet = "^0.33.3"
django-celery-beat = "^2.5.0"
redis = "^5.0.1"
requests = "^2.31.0"
django-cors-headers = "^4.3.1"
flake8 = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
